// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load and _performForm test 1`] = `
<div
  className="document-content"
  id="document-content___test"
>
  <div>
    <div
      className="row"
    >
      <div
        className="formBox col-12 max-width-970 formBoxDefault"
      >
        <h1
          className="form-component__title"
        >
          SelectCompany
        </h1>
        <form
          className=""
          id="1507198229686"
          onSubmit={[Function]}
        >
          <div>
            <div
              className="property-set form-row"
            />
            <div
              className="formActions form-row"
            >
              <div
                className="col-lg-9 offset-lg-3"
              >
                <button
                  className="btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  title=""
                  type="submit"
                >
                  Submit
                </button>
                 
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        className="col-12"
      />
    </div>
  </div>
</div>
`;

exports[`openOperationByUrl 1`] = `
<div
  className="document-content"
  id="document-content___test"
>
  <div>
    <div
      className="row"
    >
      <div
        className="formBox col-12 max-width-970 formBoxDefault"
      >
        <h1
          className="form-component__title"
        >
          SelectCompany
        </h1>
        <form
          className=""
          id="1507198229686"
          onSubmit={[Function]}
        >
          <div>
            <div
              className="property-set form-row"
            />
            <div
              className="formActions form-row"
            >
              <div
                className="col-lg-9 offset-lg-3"
              >
                <button
                  className="btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  title=""
                  type="submit"
                >
                  Submit
                </button>
                 
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        className="col-12"
      />
    </div>
  </div>
</div>
`;

exports[`performOperationResult UPDATE_USER_INFO 1`] = `null`;

exports[`performOperationResult finished 1`] = `
<div
  className="document-content"
  id="document-content___test"
>
  <div>
    <div
      className="finishedResult"
    >
      <div
        className="mb-3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Successfully completed.",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`performOperationResult finished with message 1`] = `
<div
  className="document-content"
  id="document-content___test"
>
  <div>
    <div
      className="finishedResult"
    >
      <div
        className="mb-3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Finish message<br/>with html",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`performOperationResult finished with message and actions 1`] = `
<div
  className="document-content"
  id="document-content___test"
>
  <div>
    <div
      className="finishedResult"
    >
      <div
        className="mb-3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Finish message<br/>with html",
          }
        }
      />
    </div>
  </div>
</div>
`;
